# data-analysis-speedup

./: 0 - Preparation.ipynb  1 - Data Analysis Speedup.ipynb  2 - Speedup Jit.ipynb  Data Analysis Speedup.ipynb  README.md  format.sh  pyproject.toml
utils/: measure_and_compare.py  preparation.py
